--- a/package.json
+++ b/package.json
@@ -2,20 +2,47 @@
   "name": "@verse/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve frontend",
+    "start:next": "nx serve frontend",
+    "start:nest": "nx serve backend",
+    "build": "nx build frontend && nx build backend",
+    "build:next": "nx build frontend",
+    "build:nest": "nx build backend",
+    "start:docker": "cd apps/backend && docker-compose up -d",
+    "stop:docker": "cd apps/backend && docker-compose down",
+    "test": "nx test frontend && nx test backend",
+    "test:next": "nx test frontend",
+    "test:nest": "nx test backend",
+    "lint": "nx lint frontend && nx lint backend",
+    "lint:next": "nx lint frontend",
+    "lint:nest": "nx lint backend"
+  },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.6.0",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "19.4.2",
     "@nx/eslint-plugin": "19.4.2",
     "@nx/jest": "19.4.2",
     "@nx/js": "19.4.2",
+    "@nx/nest": "^19.4.2",
     "@nx/next": "19.4.2",
+    "@nx/node": "19.4.2",
+    "@nx/web": "19.4.2",
+    "@nx/webpack": "19.4.2",
     "@nx/workspace": "19.4.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -36,10 +63,12 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "19.4.2",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "webpack-cli": "^5.1.4"
   }
 }
