fix - add all environment variables to .env.template

--- a/apps/backend/.env.template
+++ b/apps/backend/.env.template
@@ -2,3 +2,9 @@
 POSTGRES_USER=YOUR_USER
 POSTGRES_DB_NAME=YOUR_DB_NAME
 POSTGRES_PASSWORD=YOUR_PASSWORD
+DB_HOST=localhost
+DB_PORT=5432
+DB_SYNC=true
+
+# JWT configuration
+JWT_SECRET=YOUR_SECRET
