docs - REAMDE.md updated and LICENSE file added

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nx build frontend && nx build backend",
     "build:next": "nx build frontend",
     "build:nest": "nx build backend",
-    "start:docker": "cd apps/backend && docker-compose up -d",
-    "stop:docker": "cd apps/backend && docker-compose down",
+    "start:docker": "cd apps/backend && docker compose up -d",
+    "stop:docker": "cd apps/backend && docker compose down",
     "test": "nx test frontend && nx test backend",
     "test:next": "nx test frontend",
     "test:nest": "nx test backend",
