feat - create role module, admin guard and all entities

--- a/apps/backend/.env.template
+++ b/apps/backend/.env.template
@@ -1,3 +1,6 @@
+# Server configuration
+BASE_URL=http://localhost:3000
+
 # Database configuration
 POSTGRES_USER=YOUR_USER
 POSTGRES_DB_NAME=YOUR_DB_NAME
