--- a/apps/backend/project.json
+++ b/apps/backend/project.json
@@ -19,6 +19,12 @@
           "buildTarget": "backend:build:production"
         }
       }
+    },
+    "seed": {
+      "executor": "nx:run-commands",
+     "options": {
+        "command": "ts-node -r tsconfig-paths/register apps/backend/src/database/seeds/init.seeder.ts"
+      }
     }
   }
 }
