--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:nest": "nx build backend",
     "start:docker": "cd apps/backend && docker compose up -d",
     "stop:docker": "cd apps/backend && docker compose down",
+    "seed": "nx seed backend",
     "test": "nx test frontend && nx test backend",
     "test:next": "nx test frontend",
     "test:nest": "nx test backend",
@@ -78,6 +79,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "~5.4.2",
     "webpack-cli": "^5.1.4"
   }
