🛠️ Code Cleanup and UI Improvements
## 🔍 Fix: Excessive Comments Removed
- Refactoring: Removed redundant and excessive comments across the codebase to improve readability and maintainability.
- Best Practice: Streamlined documentation by keeping comments concise and relevant, following the adopted documentation methodology.

## 🛠️ Fix: Google Books API Search Issue
- API Integration: Updated the Google Books API request to include an API key for higher rate limits and reliable responses.
- Error Handling: Implemented additional error handling to manage potential rate limiting and other API errors gracefully.
- Environment: Loaded the API key securely from the .env file to protect sensitive information and allow easy configuration changes.

## 🎨 Style: No Results Message Styling
- UI Enhancement: Added custom styling to the 'No results found' message to make it more visible and user-friendly.
- Positioning: Ensured the message does not interfere with the search bar layout and is positioned correctly for clear visibility.
- Responsiveness: Adjusted styles to maintain consistency across different screen sizes and devices.

## 🎨 Style: Dropdown Menu Styling
- UI Enhancement: Styled the search category dropdown menu to match the application's design standards.
- Customization: Removed default browser styles (e.g., border-radius, background color) to create a consistent and polished look.
- Interactivity: Improved dropdown interactions, including focus and hover states, to enhance user experience.

--- a/apps/frontend/.env.template
+++ b/apps/frontend/.env.template
@@ -1,3 +1,6 @@
+# Google API
+NEXT_PUBLIC_GOOGLE_BOOKS_API_KEY=tu-api-key-aqui
+ 
 # Next config
 NEXT_PUBLIC_NEXT_API_URL=http://localhost:4200/api
 NEXT_PUBLIC_BACKEND_API_URL=http://localhost:3000/api
