feat - add a COMPOSE_PROJECT_NAME variable to .env for docker containers

--- a/apps/backend/.env.template
+++ b/apps/backend/.env.template
@@ -3,6 +3,7 @@ BASE_URL=http://localhost:3000
 NODE_ENV=development
 
 # Database configuration
+COMPOSE_PROJECT_NAME=YOUR_PROJECT_NAME
 POSTGRES_USER=YOUR_USER
 POSTGRES_DB_NAME=YOUR_DB_NAME
 POSTGRES_PASSWORD=YOUR_PASSWORD
